# target-pgvector

./: LICENSE  README.md  meltano.yml  pyproject.toml
target_pgvector/: __init__.py  __main__.py  sinks.py  target.py
